--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
     "postcss-loader": "^1.2.1",
+    "postcss-reporter": "^3.0.0",
+    "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.1",
     "style-loader": "^0.13.1",
