--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "immutable": "^3.8.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-helpful": "^1.0.4",
     "react-intl": "^2.1.5",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
-    "react-snippets": "0.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
@@ -58,6 +58,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "offline-plugin": "^4.5.3",
+    "postcss-css-variables": "^0.6.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
     "postcss-loader": "^1.2.1",
