--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "homepage": "https://github.com/3axap4eHko/react-starter-spa#readme",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.build.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.dev.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js",
     "test": "cross-env NODE_ENV=test karma start karma.conf.js"
   },
   "keywords": [],
-  "author": "3axap4eHko",
+  "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "immutable": "^3.8.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-helpful": "^1.0.5",
-    "react-intl": "^2.1.5",
+    "react-helpful": "^1.0.8",
+    "react-intl": "^2.2.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
@@ -41,8 +41,9 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.3",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "del": "^2.2.2",
     "eslint": "^3.12.2",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.8.0",
