--- a/package.json
+++ b/package.json
@@ -11,65 +11,71 @@
   },
   "homepage": "https://github.com/3axap4eHko/react-starter-spa#readme",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js",
-    "test": "cross-env NODE_ENV=test karma start karma.conf.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack/webpack.dev.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.config.js",
+    "test": "cross-env NODE_ENV=production karma start karma.conf.js"
   },
   "keywords": [],
   "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "immutable": "^3.8.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "offline-plugin": "^4.5.5",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-helpful": "^1.0.8",
-    "react-intl": "^2.2.2",
-    "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-intl": "^2.2.3",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0",
+    "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-latest": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.22.0",
+    "babili-webpack-plugin": "^0.0.9",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "del": "^2.2.2",
-    "eslint": "^3.12.2",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-react": "^6.8.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.24.1",
-    "jasmine": "^2.5.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "beta",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "jasmine": "^2.5.3",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
+    "karma": "1.3",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "offline-plugin": "^4.5.3",
+    "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
     "postcss-css-variables": "^0.6.0",
     "postcss-cssnext": "^2.9.0",
-    "postcss-import": "^9.0.0",
-    "postcss-loader": "^1.2.1",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.2",
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-test-utils": "^15.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
+    "should": "^11.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
+    "webpack": "beta",
     "webpack-dev-server": "^1.16.2"
   }
 }
