--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,15 @@
 {
   "presets": [
-    "latest",
+    ["env",{
+      "targets": {
+        "browsers": ["chrome >= 55", "ff >= 51"]
+      }
+    }],
     "react"
   ],
   "plugins": [
     "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-class-properties",
+    "react-hot-loader/babel"
   ]
 }
