--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,14 @@
 {
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
+    "airbnb"
   ],
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "es6": true,
-    "jasmine": true
+    "es6": true
   },
   "globals": {
-    "NODE_ENV": false,
+    "module": false,
     "__DEV__": false,
     "DEBUG": false,
     "process": false
@@ -18,13 +16,6 @@
   "plugins": [
     "react"
   ],
-  "settings": {
-    "react": {
-      "createClass": "createClass",
-      "pragma": "React",
-      "version": "15.0"
-    }
-  },
   "parserOptions": {
     "ecmaVersion": 6,
     "ecmaFeatures": {
@@ -32,27 +23,7 @@
     }
   },
   "rules": {
-    "no-debugger": 1,
-    "no-console": 1,
-    "new-cap": 0,
-    "strict": 0,
-    "no-underscore-dangle": 2,
-    "no-use-before-define": 2,
-    "eol-last": 0,
-    "quotes": [2, "single"],
-    "semi": [2, "always"],
-    "no-undefined": 2,
-
-    "react/no-did-mount-set-state": 2,
-    "react/no-did-update-set-state": 2,
-    "react/no-direct-mutation-state": 2,
-    "react/no-is-mounted": 2,
-    "react/no-array-index-key": 2,
-
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/jsx-no-bind": 2,
-    "react/jsx-pascal-case": 2
-
+    "no-debugger": 2,
+    "linebreak-style": 0
   }
 }
