--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "homepage": "https://github.com/3axap4eHko/react-starter-spa#readme",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack/webpack.dev.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --inline --config webpack/webpack.dev.config.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.config.js",
-    "test": "cross-env NODE_ENV=production karma start karma.conf.js"
+    "test": "cross-env NODE_ENV=production karma start karma.conf.js",
+    "lint": "eslint src/app"
   },
   "keywords": [],
   "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
@@ -38,6 +39,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
     "babili-webpack-plugin": "^0.0.9",
@@ -54,7 +56,6 @@
     "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
-    "jasmine": "^2.5.3",
     "json-loader": "^0.5.4",
     "karma": "1.3",
     "karma-chrome-launcher": "^2.0.0",
@@ -77,7 +78,7 @@
     "should": "^11.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "beta",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "beta"
   }
 }
