--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --inline --config webpack/webpack.dev.config.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.config.js",
     "test": "cross-env NODE_ENV=production karma start karma.conf.js",
-    "lint": "eslint src/app"
+    "lint": "eslint src/app/"
   },
   "keywords": [],
   "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
@@ -47,17 +47,17 @@
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "del": "^2.2.2",
-    "eslint": "^3.14.1",
+    "eslint": "3.13.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
     "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
-    "karma": "1.3",
+    "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
@@ -79,6 +79,6 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "beta"
+    "webpack-dev-server": "2.2.1"
   }
 }
