--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "reselect": "^2.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babili-webpack-plugin": "^0.0.10",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
@@ -54,7 +54,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "6.9.0",
+    "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
@@ -72,7 +72,7 @@
     "postcss-css-variables": "^0.6.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^1.3.1",
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
@@ -82,6 +82,6 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.4.1"
   }
 }
