--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "homepage": "https://github.com/3axap4eHko/react-starter-spa#readme",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --inline --config webpack/webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.prod.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --inline",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "cross-env NODE_ENV=production karma start karma.conf.js",
     "lint": "eslint src/ test/ webpack/webpack.hot-reload.jsx --ext .js,.jsx",
     "lint:fix": "eslint src/ test/ webpack/webpack.hot-reload.jsx --ext .js,.jsx --fix",
@@ -48,6 +48,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "css-mqpacker": "^5.0.1",
+    "cssnano": "^3.10.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.0.0",
@@ -82,6 +84,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "webpack-merge": "^3.0.0"
   }
 }
