--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.23.0",
-    "babili-webpack-plugin": "^0.0.10",
+    "babili-webpack-plugin": "^0.0.11",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
@@ -57,7 +57,7 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "beta",
+    "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.1",
@@ -85,6 +85,6 @@
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0"
+    "webpack-merge": "^4.0.0"
   }
 }
