--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "history": "^4.6.0",
     "immutable": "^3.8.1",
     "offline-plugin": "^4.5.5",
     "react": "^15.4.2",
@@ -29,9 +30,11 @@
     "react-helpful": "^1.0.8",
     "react-intl": "^2.2.3",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
+    "redux-logger": "^3.0.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4"
   },
@@ -47,7 +50,7 @@
     "babili-webpack-plugin": "^0.0.11",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.27.3",
     "css-mqpacker": "^5.0.1",
     "cssnano": "^3.10.0",
     "del": "^2.2.2",
@@ -71,7 +74,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
-    "postcss-css-variables": "^0.6.0",
+    "postcss-css-variables": "^0.7.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.1",
@@ -81,7 +84,7 @@
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
     "should": "^11.2.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.16.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
