--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "history": "^4.6.0",
     "immutable": "^3.8.1",
     "offline-plugin": "^4.5.5",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-helpful": "^1.0.8",
@@ -32,7 +33,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "^5.0.0-alpha.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-thunk": "^2.2.0",
@@ -49,8 +50,8 @@
     "babel-preset-react": "^6.23.0",
     "babili-webpack-plugin": "^0.0.11",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.27.3",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
     "css-mqpacker": "^5.0.1",
     "cssnano": "^3.10.0",
     "del": "^2.2.2",
@@ -61,7 +62,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "^0.10.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.1",
     "json-loader": "^0.5.4",
@@ -79,7 +80,7 @@
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.1",
     "postcss-reporter": "^3.0.0",
-    "postcss-url": "^5.1.2",
+    "postcss-url": "^6.0.4",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
