--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,7 @@
     "react-hot-loader/babel",
     "transform-object-rest-spread",
     "transform-class-properties",
+    "syntax-dynamic-import",
     ["transform-runtime", { "helpers": false, "polyfill": false }]
   ]
 }
