--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.0"
+    "reselect": "^3.0.0",
+    "styled-components": "^1.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
