--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
   "license": "MIT",
   "dependencies": {
     "history": "^4.6.0",
-    "immutable": "^3.8.1",
     "offline-plugin": "^4.5.5",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-helpful": "^1.0.8",
+    "react-helpful": "^2.1.5",
     "react-intl": "^2.2.3",
     "react-redux": "^5.0.2",
     "react-router": "^4.0.0",
@@ -36,14 +35,12 @@
     "react-router-redux": "^5.0.0-alpha.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
-    "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.0",
-    "styled-components": "^1.4.5"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^7.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -52,17 +49,17 @@
     "babel-preset-react": "^6.23.0",
     "babili-webpack-plugin": "^0.0.11",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.0.0",
     "css-loader": "^0.28.0",
-    "css-mqpacker": "^5.0.1",
+    "css-mqpacker": "^6.0.0",
     "cssnano": "^3.10.0",
     "del": "^2.2.2",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
@@ -80,17 +77,18 @@
     "postcss-css-variables": "^0.7.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.1",
+    "postcss-loader": "^2.0.5",
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^6.0.4",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
     "should": "^11.2.0",
-    "style-loader": "^0.16.0",
+    "style-loader": "^0.17.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^4.0.0"
+    "webpack-merge": "^4.0.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
