--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
   ],
   "plugins": [
     "react-hot-loader/babel",
+    "transform-decorators-legacy",
     "transform-object-rest-spread",
     "transform-class-properties",
     "syntax-dynamic-import",
