--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,10 @@
     }
   },
   "rules": {
+    "react/prop-types": 0,
+    "react/no-children-prop": 0,
+    "react/forbid-prop-types": 0,
+    "react/require-default-props": 0,
+    "import/no-named-as-default-member": 0
   }
 }
