--- a/package.json
+++ b/package.json
@@ -22,50 +22,48 @@
   "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "classnames": "^2.2.5",
     "history": "^4.6.0",
     "offline-plugin": "^4.8.1",
     "prop-types": "^15.5.10",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-helpful": "^2.1.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-helpful": "^4.1.1",
     "react-intl": "^2.2.3",
+    "react-jss": "^8.2.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
-    "react-router-redux": "^5.0.0-alpha.5",
+    "react-steersman": "^0.3.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.0.0",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.23.0",
-    "babili-webpack-plugin": "^0.0.11",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.0",
-    "css-loader": "^0.28.2",
-    "css-mqpacker": "^6.0.0",
-    "cssnano": "^3.10.0",
-    "del": "^2.2.2",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "del": "^3.0.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "^0.11.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.1",
+    "husky": "^0.14.3",
     "json-loader": "^0.5.4",
-    "karma": "^1.4.1",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
@@ -73,20 +71,12 @@
     "karma-mocha-reporter": "^2.2.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
-    "mocha": "^3.4.1",
-    "postcss-css-variables": "^0.7.0",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.5",
-    "postcss-reporter": "^3.0.0",
-    "postcss-url": "^6.1.0",
-    "precss": "^1.4.0",
+    "mocha": "^5.0.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-hot-loader": "3.0.0-beta.6",
-    "should": "^11.2.0",
-    "style-loader": "^0.18.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "react-hot-loader": "^3.1.3",
+    "should": "^13.2.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
     "webpack-dev-server": "^2.4.1",
     "webpack-merge": "^4.0.0",
     "webpack-visualizer-plugin": "^0.1.11"
