--- a/.reduxrc
+++ b/.reduxrc
@@ -1,14 +1,13 @@
 {
   "useCamelCasedPaths": false,
+  "reduxPath": "src/app/redux",
   "actionsPath": "src/app/redux/actions",
-  "reducersPath": "src/app/redux/reducers",
   "typesPath": "src/app/redux/types",
   "statesPath": "src/app/redux/states",
-  "actionTemplatePath": "src/app/redux/templates/action.jst",
-  "actionsIndexTemplatePath": "src/app/redux/templates/action-index.jst",
-  "reducerTemplatePath": "src/app/redux/templates/reducer.jst",
-  "reducersIndexTemplatePath": "src/app/redux/templates/reducer-index.jst",
-  "typesTemplatePath": "src/app/redux/templates/types.jst",
-  "stateTemplatePath": "src/app/redux/templates/state.jst",
-  "statesIndexTemplatePath": "src/app/redux/templates/state-index.jst"
+  "storeTemplatePath": "src/app/redux/templates/store.dot",
+  "actionTemplatePath": "src/app/redux/templates/action.dot",
+  "actionsIndexTemplatePath": "src/app/redux/templates/action-index.dot",
+  "typesTemplatePath": "src/app/redux/templates/types.dot",
+  "stateTemplatePath": "src/app/redux/templates/state.dot",
+  "statesIndexTemplatePath": "src/app/redux/templates/state-index.dot"
 }
