--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
     "react/no-children-prop": 0,
     "react/forbid-prop-types": 0,
     "react/require-default-props": 0,
+    "react/jsx-filename-extension": 0,
+    "import/extensions": 0,
     "import/no-named-as-default-member": 0
   }
 }
