--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helpful": "^4.1.1",
-    "react-intl": "^2.2.3",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.5",
-    "react-steersman": "^0.3.0",
+    "react-steersman": "^2.7.3",
     "redux": "^3.6.0",
+    "redux-base": "3.3.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
@@ -41,7 +41,7 @@
     "babel-core": "^6.23.1",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.0.0",
-    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-minify-webpack-plugin": "^0.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -54,13 +54,13 @@
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.6.1",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.0.0",
     "husky": "^0.14.3",
     "json-loader": "^0.5.4",
     "karma": "^2.0.0",
@@ -72,12 +72,12 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "mocha": "^5.0.0",
-    "react-addons-test-utils": "^15.4.2",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0",
     "should": "^13.2.1",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.4.1",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.1.0",
     "webpack-merge": "^4.0.0",
     "webpack-visualizer-plugin": "^0.1.11"
   }
