--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.23.0",
+    "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.0",
     "del": "^3.0.0",
