--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ sudo: required
 dist: trusty
 language: node_js
 node_js:
-  - "6"
-  - "7"
+  - "8"
 notifications:
   on_success: never
   on_failure: always
 before_install:
+  - nvm install 8
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
@@ -15,4 +15,6 @@ before_install:
   - sudo apt-get install -y libappindicator1 fonts-liberation
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - sudo dpkg -i google-chrome*.deb
+install:
+  - yarn
 script: npm run test
