--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,6 @@
 {
   "presets": [
-    ["env",{
-      "targets": {
-        "browsers": ["chrome >= 55", "ff >= 51"]
-      },
-      "modules": false
-    }],
+    "env",
     "react"
   ],
   "plugins": [
