--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     "module": false,
     "__DEV__": false,
     "DEBUG": false,
-    "process": false
+    "process": false,
+    "expect": false
   },
   "plugins": [
     "react"
@@ -24,6 +25,7 @@
     }
   },
   "rules": {
+    "object-curly-newline": 0,
     "react/prop-types": 0,
     "react/no-children-prop": 0,
     "react/forbid-prop-types": 0,
