--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --inline",
     "build": "cross-env NODE_ENV=production webpack",
-    "test": "cross-env NODE_ENV=production karma start karma.conf.js",
+    "test": "cross-env NODE_ENV=development jest",
     "lint": "eslint src/ test/ webpack/webpack.hot-reload.jsx --ext .js,.jsx",
     "lint:fix": "eslint src/ test/ webpack/webpack.hot-reload.jsx --ext .js,.jsx --fix",
     "precommit": "yarn lint"
@@ -31,6 +31,8 @@
     "react-helpful": "^4.1.1",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.5",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-steersman": "^2.7.3",
     "redux": "^3.6.0",
     "redux-base": "3.3.2",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.0.0",
     "babel-minify-webpack-plugin": "^0.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -47,12 +50,13 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-react": "^6.23.0",
-    "clean-webpack-plugin": "^0.1.18",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.0",
     "del": "^3.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
@@ -63,6 +67,7 @@
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^3.0.0",
     "husky": "^0.14.3",
+    "jest": "^22.4.2",
     "json-loader": "^0.5.4",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -74,6 +79,7 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^5.0.0",
     "react-hot-loader": "^4.0.0",
+    "react-test-renderer": "^16.2.0",
     "should": "^13.2.1",
     "url-loader": "^0.6.2",
     "webpack": "^4.0.1",
