--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-steersman": "^2.7.3",
+    "react-steersman": "^4.0.0-1",
+    "react-typographic": "^0.1.4",
     "redux": "^3.6.0",
     "redux-base": "3.3.2",
     "redux-logger": "^3.0.6",
@@ -76,12 +77,12 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.2",
+    "karma-webpack": "^3.0.0",
     "mocha": "^5.0.0",
     "react-hot-loader": "^4.0.0",
     "react-test-renderer": "^16.2.0",
     "should": "^13.2.1",
-    "url-loader": "^0.6.2",
+    "url-loader": "^1.0.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0",
