--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 sudo: required
-dist: trusty
+dist: bionic
 language: node_js
-node_js:
-  - "8"
-notifications:
-  on_success: never
-  on_failure: always
+node_js: [12, 14]
+
 before_install:
-  - nvm install 8
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
@@ -17,4 +13,11 @@ before_install:
   - sudo dpkg -i google-chrome*.deb
 install:
   - yarn
-script: npm run test
+script:
+  - yarn lint
+  - yarn build
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
