--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-starter-spa",
   "version": "1.0.0",
-  "description": "React Redux Starter SPA",
+  "description": "React Starter SPA",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/3axap4eHko/react-starter-spa.git"
@@ -11,82 +11,54 @@
   },
   "homepage": "https://github.com/3axap4eHko/react-starter-spa#readme",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --inline",
-    "build": "cross-env NODE_ENV=production webpack",
-    "test": "cross-env NODE_ENV=development jest",
-    "lint": "eslint src/ test/ webpack/webpack.hot-reload.jsx --ext .js,.jsx",
-    "lint:fix": "eslint src/ test/ webpack/webpack.hot-reload.jsx --ext .js,.jsx --fix",
-    "precommit": "yarn lint"
+    "start": "NODE_ENV=development webpack-dev-server --open --hot --inline",
+    "build": "rm -rf build && NODE_ENV=production webpack",
+    "jss": "jss",
+    "test": "NODE_ENV=development jest",
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
   "author": "Ivan Zakharchenko <3axap4eHko@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.2.5",
-    "history": "^4.6.0",
-    "offline-plugin": "^4.8.1",
-    "prop-types": "^15.5.10",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-helpful": "^4.1.1",
-    "react-jss": "^8.2.1",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-steersman": "^4.0.0-1",
-    "react-typographic": "^0.1.4",
-    "redux": "^3.6.0",
-    "redux-base": "3.3.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "clsx": "^1.1.1",
+    "hoist-non-react-statics": "^3.3.2",
+    "jss-cli": "^6.0.0",
+    "nprogress": "^0.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-jss": "^10.3.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.4.1",
-    "babel-loader": "^7.0.0",
-    "babel-minify-webpack-plugin": "^0.3.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.0",
-    "del": "^3.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^3.0.0",
-    "husky": "^0.14.3",
-    "jest": "^22.4.2",
-    "json-loader": "^0.5.4",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
-    "mocha": "^5.0.0",
-    "react-hot-loader": "^4.0.0",
-    "react-test-renderer": "^16.2.0",
-    "should": "^13.2.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0",
-    "webpack-merge": "^4.0.0",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/webpack-env": "^1.15.2",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "copy-webpack-plugin": "^6.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "7.2.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.1.1",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
