--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "copy-webpack-plugin": "^6.0.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "7.2.0",
+    "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "4.0.0",
-    "jss-cli": "^6.0.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "jss-cli": "^6.0.0",
     "react-test-renderer": "^16.13.1",
     "ts-jest": "^26.1.1",
     "ts-loader": "^7.0.5",
